Added steps table and enpoint. Updated swagger
